# LexiFold

./: README.md
.claude/commands/: run.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: architecture.md  implementation_plan.md  npu_integration.md
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  neural_engine.cpp  neural_engine.h  ppm_engine.cpp  ppm_engine.h  rwkv_engine.cpp  rwkv_engine.h
entry/src/main/cpp/types/: oh-package.json5
entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
entry/src/main/ets/core/: ArchiveFormat.ets  ArithmeticCoder.ets  Checksum.ets  ChunkProcessor.ets  PredictorBackend.ets  TextPreprocessor.ets  Tokenizer.ets  Types.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/service/: CompressionService.ets
entry/src/main/resources/base/element/: string.json
tools/: benchmark.ts  train_gru.py  train_rwkv.py  verify_roundtrip.ts
